force-app/main/default/objects/Payment_Invoice__c/Payment_Invoice__c.object-meta.xml
<CustomObject>
    <label>Payment Invoice</label>
    <nameField>
        <label>Invoice Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>