force-app/main/default/objects/Payment_Invoice__c/fields/Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Company_Id__c</fullName>
    <description>Invoice Company ID passed from billing system. Used to associate the Company Account and related payroll opportunities to the Payment Invoice.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Invoice Company ID passed from billing system. Used to associate the Company Account and related payroll opportunities to the Payment Invoice.</inlineHelpText>
    <label>Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>