force-app/main/default/objects/Payment_Invoice__c/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <formula>Employee_Count__c + Contractor_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The combined total number of invoiced employees and contractors.</inlineHelpText>
    <label>Invoiced Company Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>