force-app/main/default/objects/Payment_Invoice__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Unique ID from billing system. Used to audit if there are issues with Payment Invoice creation.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID from billing system. Used to audit if there are issues with Payment Invoice creation.</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>