force-app/main/default/objects/Payment_Invoice__c/fields/First_Day_of_Invoice_Month__c.field-meta.xml
<CustomField>
    <fullName>First_Day_of_Invoice_Month__c</fullName>
    <description>Formula field that converts the Invoice Month to full date format with the day as 1. Converts YYYY-MM to mm/dd/yyyy format.</description>
    <formula>DATE( VALUE(LEFT(For_Month__c, 4)), VALUE(RIGHT(For_Month__c, 2)), 1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field that converts the Invoice Month to full date format with the day as 1. Converts YYYY-MM to mm/dd/yyyy format.</inlineHelpText>
    <label>First Day of Invoice Month</label>
    <type>Date</type>
</CustomField>