force-app/main/default/objects/Payment_Invoice__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message for the Payment Invoice. Field will show any messaging during the processing of the record to the Sales/User facing objects. Will show Processed or error messages during processing.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Message for the Payment Invoice. Field will show any messaging during the processing of the record to the Sales/User facing objects. Will show Processed or error messages during processing.</inlineHelpText>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>