force-app/main/default/objects/Payment_Invoice__c/fields/Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_End_Date__c</fullName>
    <description>The last day of the invoice period.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The last day of the invoice period.</inlineHelpText>
    <label>Period End Date</label>
    <type>Date</type>
</CustomField>