force-app/main/default/objects/Payment_Invoice__c/fields/Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_Start_Date__c</fullName>
    <description>The first day of the invoice Period.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The first day of the invoice Period.</inlineHelpText>
    <label>Period Start Date</label>
    <type>Date</type>
</CustomField>