force-app/main/default/objects/Payment_Invoice__c/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <description>Rate Plan is used to populate the Pricing field from the Price Book Name.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Rate Plan is used to populate the Pricing field from the Price Book Name.</inlineHelpText>
    <label>Pricing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>