force-app/main/default/objects/Payment_Invoice__c/fields/Workflow_Run_Number__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Run_Number__c</fullName>
    <description>Unique workflow run number identifier from the billing system (Zuora). Matched to Invoice Run Log record. Used to compare the number of Payment Invoices for the Workflow Run Number to the Number of Invoices on the Invoice Run Log.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Unique workflow run number identifier from the billing system (Zuora). Matched to Invoice Run Log record. Used to compare the number of Payment Invoices for the Workflow Run Number to the Number of Invoices on the Invoice Run Log.</inlineHelpText>
    <label>Workflow Run Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>